<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etStudyObject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="11dp"
        android:textAlignment="center"
        android:hint="@string/study_object"
        android:layout_marginLeft="2dp"
        android:layout_alignParentLeft="true" />


    <EditText
        android:id="@+id/examDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="49dp"
        android:clickable="true"
        android:textAlignment="center"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="time"
        android:importantForAutofill="no"
         />

    <EditText
        android:id="@+id/examHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="99dp"
        android:clickable="true"
        android:textAlignment="center"
        android:focusable="false"
        android:hint="@string/hour"
        android:importantForAutofill="no" />



    <EditText
        android:id="@+id/classroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-23dp"
        android:layout_marginLeft="-23dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="7dp"
        android:hint="@string/classroom"
        android:textAlignment="center"
        android:layout_marginRight="7dp"
        android:layout_alignParentRight="true" />


</RelativeLayout>