<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_show_details" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/viewDetails"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/addMark"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_menu_exams" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/addExam"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_delete_stud" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:text="@string/deleteStud"
            />
    </LinearLayout>
</LinearLayout>