<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        android:gravity="center">

        <TextView
            android:id="@+id/addStudentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addUser"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="20sp" />


            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/lastName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:nextFocusDown="@id/etFirstName"
                android:textAlignment="center"
                android:layout_marginTop="40sp"
                 />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/firstName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center"
                android:layout_marginTop="20sp"
                android:nextFocusDown="@id/etEmail" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:importantForAutofill="no"
            android:layout_marginTop="20sp"
            android:nextFocusDown="@id/spRole" />

        <Spinner
            android:id="@+id/spRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="20sp"
            android:entries="@array/roles"
            android:textAlignment="center"
            android:nextFocusDown="@id/btnAddStudent"
            />

        <Button
            android:id="@+id/btnAddStudent"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="20sp"
            android:text="@string/addUser"
            />

    </LinearLayout>
</ScrollView>
