<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTeacherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/sym_action_email"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/email"
            />
        <TextView
            android:id="@+id/tvTeacherEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"

            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/stat_sys_phone_call"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/phone"
            />
        <TextView
            android:id="@+id/tvTeacherPhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"

            />

    </LinearLayout>
    <Button
        android:id="@+id/btnTeacherObjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/study_objects"
        android:backgroundTint="@android:color/holo_blue_light"
        />

</LinearLayout>