<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/login">
    <LinearLayout
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30sp"
        android:layout_marginTop="30sp"
        tools:context=".MainActivity"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tvLoginHeader"
            android:layout_width="299dp"
            android:layout_height="35dp"
            android:text="@string/connect"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="25sp"
            />

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="30sp"
            android:hint="@string/email"
            android:textColorHint="@android:color/white"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="262dp"
            android:layout_height="48dp"
            android:text="@string/connect"
            android:layout_marginTop="50sp"
            android:background="@android:color/holo_blue_dark" />
    </LinearLayout>
</ScrollView>